--- a/index.html
+++ b/index.html
@@ -38,13 +38,10 @@
         </form>
         <div id="output">
             <h2>Results:</h2>
-            <p>Results will appear here after calculation.</p>
+            <canvas id="biorhythm-chart" width="400" height="300"></canvas>
+            <button id="download-pdf">Download PDF</button>
         </div>
-        <button id="download-pdf">Download PDF</button>
     </main>
-    <footer>
-        <p>&copy; 2025 Biorhythm Calculator. All rights reserved.</p>
-    </footer>
     <script src="app.js"></script>
 </body>
 </html>
