--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <h1>Biorhythm Calculator</h1>
-        <p>Discover your physical, emotional, and intellectual cycles.</p>
+        <p>Calculate your physical, emotional, and intellectual cycles.</p>
     </header>
     <main>
         <form id="biorhythm-form">
@@ -31,9 +31,7 @@
                 <label for="target-date">Target Date:</label>
                 <input type="date" id="target-date" name="target-date" value="">
             </div>
-            <div class="form-group">
-                <button type="button" id="calculate-btn">Calculate</button>
-            </div>
+            <button type="button" id="calculate-btn">Calculate</button>
         </form>
         <div id="output">
             <h2>Results:</h2>
