--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
         <form id="biorhythm-form">
             <div class="form-group">
                 <label for="birthdate">Date of Birth:</label>
-                <input type="date" id="birthdate" name="birthdate" required placeholder="Select your birth date">
+                <input type="date" id="birthdate" name="birthdate" required>
             </div>
             <div class="form-group">
                 <label for="target-date">Target Date:</label>
-                <input type="date" id="target-date" name="target-date" value="" placeholder="Select your target date">
+                <input type="date" id="target-date" name="target-date" value="">
             </div>
-            <button type="button" id="calculate-btn" disabled>Calculate</button>
+            <button type="button" id="calculate-btn">Calculate</button>
         </form>
         <div id="output">
             <h2>Results:</h2>
-            <p>Enter your birthdate and target date to see your biorhythms.</p>
+            <p>Results will appear here after calculation.</p>
         </div>
     </main>
     <footer>
